--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,13 @@
             <artifactId>selenium-firefox-driver</artifactId>
             <version>3.141.59</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.3</version>
+        </dependency>
+
     </dependencies>
 </project>
